--- a/templates/index.html
+++ b/templates/index.html
@@ -365,6 +365,15 @@
       </svg>
       <span>Stop</span>
     </button>
+    <button id="deleteCurrentBtn" class="modern-btn modern-btn-danger">
+      <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+        <polyline points="3,6 5,6 21,6"></polyline>
+        <path d="M19,6V20a2,2 0 0,1 -2,2H7a2,2 0 0,1 -2,-2V6M8,6V4a2,2 0 0,1 2,-2h4a2,2 0 0,1 2,2V6"></path>
+        <line x1="10" y1="11" x2="10" y2="17"></line>
+        <line x1="14" y1="11" x2="14" y2="17"></line>
+      </svg>
+      <span>Delete</span>
+    </button>
     <button id="streamBtn" class="modern-btn modern-btn-success">
       <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
         <path d="M21.2 8.4c.5.38.8.97.8 1.6v4a2 2 0 0 1-.8 1.6l-7 5.25A2 2 0 0 1 11 19.25v-4.5a2 2 0 0 1 .8-1.6l7-5.25Z"></path>
